--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@ng-select/ng-select": "^2.14.0",
+    "bootstrap": "^3.4.0",
     "core-js": "^2.5.4",
+    "ng-flash-messages": "^0.3.0",
+    "ngx-bootstrap": "^3.1.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
